--- a/hypatiamat-TPC/backend/package.json
+++ b/hypatiamat-TPC/backend/package.json
@@ -28,7 +28,8 @@
     "strapi-plugin-email": "3.2.5",
     "strapi-plugin-upload": "3.2.5",
     "strapi-plugin-users-permissions": "3.2.5",
-    "strapi-utils": "3.2.5"
+    "strapi-utils": "3.2.5",
+    "uuid": "^8.3.1"
   },
   "author": {
     "name": "A Strapi developer"
