--- a/backend/api/tpc-aluno/models/tpc-aluno.settings.json
+++ b/backend/api/tpc-aluno/models/tpc-aluno.settings.json
@@ -18,11 +18,12 @@
     "codTurma": {
       "type": "string"
     },
-    "idTPC": {
-      "type": "integer"
-    },
     "resolucoes": {
       "collection": "resolucao"
+    },
+    "tpcs": {
+      "via": "tpc_alunos",
+      "collection": "tpc"
     }
   }
 }
