--- a/backend/api/tpc-questao/models/tpc-questao.settings.json
+++ b/backend/api/tpc-questao/models/tpc-questao.settings.json
@@ -13,7 +13,12 @@
   },
   "attributes": {
     "codQuestao": {
-      "type": "string"
+      "type": "string",
+      "unique": false
+    },
+    "tpcs": {
+      "collection": "tpc",
+      "via": "tpc_questoes"
     }
   }
 }
