--- a/backend/api/turma/models/turma.settings.json
+++ b/backend/api/turma/models/turma.settings.json
@@ -8,8 +8,9 @@
   },
   "options": {
     "increments": true,
-    "timestamps": true,
-    "draftAndPublish": true
+    "timestamps": false,
+    "populateCreatorFields": false,
+    "draftAndPublish": false
   },
   "attributes": {
     "turma": {
