Aluno Resolucao and fixes

--- a/backend/api/tpc-aluno/models/tpc-aluno.settings.json
+++ b/backend/api/tpc-aluno/models/tpc-aluno.settings.json
@@ -13,6 +13,9 @@
     "draftAndPublish": false
   },
   "attributes": {
+    "nome": {
+      "type": "string"
+    },
     "codAluno": {
       "type": "string"
     },
