--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "simple-keyboard": "^3.0.50",
     "sweetalert2": "^10.16.7",
     "vue": "^2.6.11",
+    "vue-responsive-components": "^0.2.3",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuetify-datetime-picker": "^2.1.1",
