--- a/backend/api/tpc-aluno/models/tpc-aluno.settings.json
+++ b/backend/api/tpc-aluno/models/tpc-aluno.settings.json
@@ -26,8 +26,11 @@
       "collection": "resolucao"
     },
     "tpcs": {
-      "via": "tpc_alunos",
-      "collection": "tpc"
+      "collection": "tpc",
+      "via": "tpc_alunos"
+    },
+    "numero": {
+      "type": "integer"
     }
   }
 }
