--- a/backend/api/professor/models/professor.settings.json
+++ b/backend/api/professor/models/professor.settings.json
@@ -29,6 +29,15 @@
     "password": {
       "type": "string",
       "private": true
+    },
+    "confirmacao": {
+      "type": "integer"
+    },
+    "validade": {
+      "type": "date"
+    },
+    "premium": {
+      "type": "integer"
     }
   }
 }
