--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,10 @@
     "@mdi/js": "^5.9.55",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "cross-storage": "^1.0.0",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.3.1",
+    "jwt-decode": "^3.1.2",
     "simple-keyboard": "^3.0.50",
     "sweetalert2": "^10.16.7",
     "vue": "^2.6.11",
