fix axios and payloads

--- a/backend/api/escola/models/escola.settings.json
+++ b/backend/api/escola/models/escola.settings.json
@@ -18,6 +18,15 @@
     },
     "cod": {
       "type": "string"
+    },
+    "localidade": {
+      "type": "string"
+    },
+    "distrito": {
+      "type": "string"
+    },
+    "pais": {
+      "type": "string"
     }
   }
 }
